--- a/hassio-addon-nodejs-starter/package.json
+++ b/hassio-addon-nodejs-starter/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "kdw2060",
-  "license": "ISC",
+  "author": "marcomow",
+  "license": "UNLICENSED",
   "dependencies": {
     "express": "^4.15.4"
   }
