updated run command

--- a/hass-addon-petoneer-smartdot/Dockerfile
+++ b/hass-addon-petoneer-smartdot/Dockerfile
@@ -11,7 +11,7 @@ RUN apk add --no-cache \
 
 COPY package.json /
 COPY index.js /
-RUN cd / && npm install --unsafe-perm
+RUN cd / && npm install --unsafe-perm && npm cache verify && rm -rf /tmp/
 
 COPY run.sh /
 RUN chmod a+x /run.sh
