--- a/hass-addon-petoneer-smartdot/Dockerfile
+++ b/hass-addon-petoneer-smartdot/Dockerfile
@@ -2,15 +2,10 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
-RUN apt update && apt install -y mc bluetooth bluez libbluetooth-dev libudev-dev
-RUN apk add --no-cache \
-    nodejs \
-    npm \
-    git
 
-COPY package.json /
-COPY index.js /
-RUN cd / && npm install --unsafe-perm
+RUN apt update && apt install -y mc bluetooth bluez libbluetooth-dev libudev-dev
+
+CMD npm install && node index.js
 
 COPY run.sh /
 RUN chmod a+x /run.sh
