--- a/hass-addon-petoneer-smartdot/package.json
+++ b/hass-addon-petoneer-smartdot/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "hass_addon_petoneer_smartdot",
+  "name": "smartdot",
   "version": "0.0.1",
   "description": "Home Assistant add-on to control Petoneer Smart Dot",
   "main": "index.js",
   "author": "marcomow",
   "license": "UNLICENSED",
   "dependencies": {
-    "node-ble": "^1.5.0"
+    "@abandonware/noble": "1.9.2-14"
+  },
+  "scripts": {
+    "start": "NODE_ENV=production node src/index.js"
   }
 }
